fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-222-f2d780c847.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function MixBlendMode() {
  return (
    <Text
      color="#FF1919"
      fontFamily="Jalnan Gothic TTF"
      fontSize="64px"
      fontWeight="400"
      letterSpacing="-0.05em"
      lineHeight="90px"
      mixBlendMode="darken"
      wordBreak="keep-all"
    >
      데브파이브
    </Text>
  )
}"
