fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-223-4dc8092992.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function TestCase드론아레나() {
  return (
    <VStack
      alignItems="flex-end"
      bg="$primaryBg"
      border="solid 1px $border"
      gap="20px"
      px="39px"
      py="29px"
    >
      <Text
        color="$text"
        fontFamily="SUIT"
        fontSize="20px"
        fontWeight="700"
        letterSpacing="-1px"
        lineHeight="30px"
        w="100%"
        wordBreak="keep-all"
      >
        간편 로그인 연동
      </Text>
      <VStack w="100%">
        <Flex
          alignItems="center"
          borderRadius="10px"
          gap="12px"
          px="20px"
          py="12px"
        >
          <Text
            color="$text"
            flex="1"
            fontFamily="SUIT"
            fontSize="16px"
            fontWeight="600"
            letterSpacing="-1px"
            lineHeight="24px"
            wordBreak="keep-all"
          >
            카카오
          </Text>
          <Text
            color="$gray500"
            fontFamily="SUIT"
            fontSize="15px"
            fontWeight="400"
            letterSpacing="-0.5px"
            lineHeight="23px"
            wordBreak="keep-all"
          >
            연결 전
          </Text>
          <Center
            bg="$primary"
            border="solid 1px $primary"
            borderRadius="100px"
            px="11px"
            py="3px"
          >
            <Text
              color="#FFF"
              fontFamily="Pretendard"
              fontSize="14px"
              fontWeight="500"
              letterSpacing="0px"
              lineHeight="16px"
              wordBreak="keep-all"
            >
              인증하기
            </Text>
          </Center>
        </Flex>
        <Flex
          alignItems="center"
          borderRadius="10px"
          gap="12px"
          px="20px"
          py="12px"
        >
          <Text
            color="$text"
            flex="1"
            fontFamily="SUIT"
            fontSize="16px"
            fontWeight="600"
            letterSpacing="-1px"
            lineHeight="24px"
            wordBreak="keep-all"
          >
            구글
          </Text>
          <Text
            color="$gray500"
            fontFamily="SUIT"
            fontSize="15px"
            fontWeight="400"
            letterSpacing="-0.5px"
            lineHeight="23px"
          >
            cooolvita@gmail.com
          </Text>
          <Center
            bg="$primary"
            border="solid 1px $primary"
            borderRadius="100px"
            px="11px"
            py="3px"
          >
            <Text
              color="#FFF"
              fontFamily="Pretendard"
              fontSize="14px"
              fontWeight="500"
              letterSpacing="0px"
              lineHeight="16px"
              wordBreak="keep-all"
            >
              인증하기
            </Text>
          </Center>
        </Flex>
      </VStack>
      <Box bg="$border" h="1px" w="100%" />
      <VStack w="100%">
        <Flex
          alignItems="center"
          borderRadius="10px"
          gap="12px"
          px="20px"
          py="12px"
        >
          <Text
            color="$text"
            flex="1"
            fontFamily="SUIT"
            fontSize="16px"
            fontWeight="600"
            letterSpacing="-1px"
            lineHeight="24px"
            wordBreak="keep-all"
          >
            서비스 이용약관
          </Text>
          <Box
            bg="$gray300"
            boxSize="24px"
            maskImage="url(/icons/ic:round-arrow-left.svg)"
            maskPos="center"
            maskRepeat="no-repeat"
            maskSize="contain"
            transform="rotate(180deg)"
          />
        </Flex>
        <Flex
          alignItems="center"
          borderRadius="10px"
          gap="12px"
          px="20px"
          py="12px"
        >
          <Text
            color="$text"
            flex="1"
            fontFamily="SUIT"
            fontSize="16px"
            fontWeight="600"
            letterSpacing="-1px"
            lineHeight="24px"
            wordBreak="keep-all"
          >
            개인정보 처리방침
          </Text>
          <Box
            bg="$gray300"
            boxSize="24px"
            maskImage="url(/icons/ic:round-arrow-left.svg)"
            maskPos="center"
            maskRepeat="no-repeat"
            maskSize="contain"
            transform="rotate(180deg)"
          />
        </Flex>
        <Flex
          alignItems="center"
          borderRadius="10px"
          gap="12px"
          px="20px"
          py="12px"
        >
          <Text
            color="$text"
            flex="1"
            fontFamily="SUIT"
            fontSize="16px"
            fontWeight="600"
            letterSpacing="-1px"
            lineHeight="24px"
            wordBreak="keep-all"
          >
            회원 탈퇴
          </Text>
          <Box
            bg="$gray300"
            boxSize="24px"
            maskImage="url(/icons/ic:round-arrow-left.svg)"
            maskPos="center"
            maskRepeat="no-repeat"
            maskSize="contain"
            transform="rotate(180deg)"
          />
        </Flex>
      </VStack>
    </VStack>
  )
}"
