fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-224-075a41e65c.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function 다양한도형() {
  return (
    <Box
      bg="#D9D9D9"
      maskImage="url(/icons/Star7.svg)"
      maskPos="center"
      maskRepeat="no-repeat"
      maskSize="contain"
    />
  )
}"
