fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-226-b2c28bcc8f.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function 다양한도형() {
  return (
    <Box
      bg="#D9D9D9"
      maskImage="url(/icons/Polygon1.svg)"
      maskPos="center"
      maskRepeat="no-repeat"
      maskSize="contain"
    />
  )
}"
