fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-228-221bd0c553.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function 다양한도형() {
  return <Box maxW="calc(140px - 6px)" outline="solid 3px #FF000080" transform="translate(3px, -3px)" />
}"
