fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-229-9f57002cd6.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function 다양한도형() {
  return <Box maxW="calc(140px - 6px)" outline="solid 3px #F00" transform="translate(3px, -3px)" />
}"
