fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-230-2af59fd9fa.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function 다양한도형() {
  return <Box maxW="calc(140px - 8px)" outline="solid 4px #F00" transform="translate(4px, -4px)" />
}"
