fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-232-8e875ce9e3.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function 다양한도형() {
  return <Box maxW="calc(131px - 2px)" outline="solid 1px #F00" transform="rotate(-90deg)" />
}"
