fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-233-0a60be5fbc.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function 다양한도형() {
  return (
    <Box
      bg="#000"
      maskImage="url(/icons/Vector4.svg)"
      maskPos="center"
      maskRepeat="no-repeat"
      maskSize="contain"
    />
  )
}"
