fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-235-8a3992468b.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function SvgDetail() {
  return <Image src="/icons/DevupUI.svg" />
}"
