fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-236-621c6d6a9e.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function SvgDetail() {
  return (
    <Center bg="$containerBackground" border="solid 1px $gray200" borderRadius="10px" p="7px">
      <Box
        aspectRatio="1"
        bg="$textLight"
        boxSize="24px"
        maskImage="url(/icons/back.svg)"
        maskPos="center"
        maskRepeat="no-repeat"
        maskSize="contain"
        transform="rotate(180deg)"
      />
    </Center>
  )
}"
